[package]
name = "libsabledb"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0", features = ["log"] }
tracing-subscriber = "0"
async-trait = "0"
test-case = "3"
rand = "0"
lazy_static = "1"
serde_json = "1"
rocksdb = "0"
serial_test = "2.0.0"
ctrlc = "3.4.0"
dashmap = "5.5.3"
num-traits = "0.2.17"
bitflags = "2"
crc16 = "0.4.0"
crossbeam-skiplist = "0.1.2"
crossbeam = "0.8.3"
hdrhistogram = "7.5.4"
sled = "0.34.7"
rustls-pemfile = "2.0.0"
tokio-rustls = "0"
pki-types = { package = "rustls-pki-types", version = "1" }
rustls = { version = "0.23", default-features = false, features = ["std"] }
rust-ini = "0.20.0"
serde = { version = "1", features = ["derive"] }
rclite = "0.2.4"

[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
affinity = "0"

[features]
default = ["rocks_db"]
rocks_db = []
