[package]
name = "sb"
version = "0.1.0"
edition = "2021"

[dependencies]
libsabledb = { path = "../libsabledb" }
clap = { version = "4", features = ["derive"] }
tracing = { version = "0", features = ["log"] }
tracing-subscriber = "0"
ctrlc = "3.4.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
bytes = "1"
rand = "0"
lazy_static = "1"
indicatif = "0.17.7"
hdrhistogram = "7.5.4"
tokio-rustls = "0"
rustls = { version = "0", default-features = false }
webpki-roots = "0"
pki-types = { package = "rustls-pki-types", version = "1" }
test-case = "3"
