[package]
name = "sdb-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { version = "0", features = ["log"] }
tracing-subscriber = "0"
rustyline = { version = "12", features = ["with-file-history", "derive", "with-sqlite-history"] }
clap = { version = "4", features = ["derive"] }
redis = { version = "0", features = ["tls-native-tls"] }
libsabledb = { path = "../libsabledb" }
bytes = "1"
lazy_static = "1"
